<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/pantalla_principal"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="15dp" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:paddingRight="10dp"
            android:text="@string/dni"
            android:textColor="@color/defaultText"
            android:textSize="@dimen/defaultText" />

        <EditText
            android:id="@+id/main_dni"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:ems="10"
            android:hint="@string/dni"
            android:inputType="number" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" >

        <ImageButton
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/search"
            android:contentDescription="@string/search_button"
            android:onClick="consult"
            android:src="@drawable/search" />

        <ImageButton
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/add"
            android:contentDescription="@string/add_button"
            android:onClick="add"
            android:src="@drawable/add" />

        <ImageButton
            android:id="@+id/editButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edit"
            android:contentDescription="@string/edit_button"
            android:onClick="modify"
            android:src="@drawable/edit" />

        <ImageButton
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/delete"
            android:contentDescription="@string/delete_button"
            android:onClick="delete"
            android:src="@drawable/delete" />

    </LinearLayout>

</LinearLayout>
